Address PR Comments

--- a/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
+++ b/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
@@ -38,7 +38,7 @@
               trustLevel="Base"
               />
           <class
-             activatableClassId="AdaptiveCards.XamlCardRenderer.XamlCardRenderer"
+             activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveTextBlock"
              threading="Both"
              trustLevel="Base"
               />
