Add TextBlock to model. (#73)
* Add TextBlock to model and renderer

--- a/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
+++ b/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
@@ -37,6 +37,11 @@
               threading="Both"
               trustLevel="Base"
               />
+          <class
+             activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveTextBlock"
+             threading="Both"
+             trustLevel="Base"
+              />
         </classes>
       </winRTInProcServer>
     </servers>
