Add UWP card visualizer
This change adds the UWP application that will eventually load json and
use the UWP card renderer to display the generated xaml/image.  The
visualizer in this change wires up the current renderer and displays
it's xaml output, which is hardcoded to a blue square.

Also included in this change are the code changes to allow the renderer
component to be instantiated from its winmd, including proper calling of
mdmerge and the hinting in the consuming csproj.

--- a/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
+++ b/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
@@ -38,9 +38,14 @@
               trustLevel="Base"
               />
           <class
-             activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveTextBlock"
-             threading="Both"
-             trustLevel="Base"
+              activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveTextBlock"
+              threading="Both"
+              trustLevel="Base"
+              />
+          <class
+              activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveCard"
+              threading="Both"
+              trustLevel="Base"
               />
         </classes>
       </winRTInProcServer>
