--- a/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
+++ b/UWP/Renderer/dll/AdaptiveCards.XamlCardRenderer.man
@@ -17,8 +17,8 @@
   <file
       destinationPath="$(runtime.system32)"
       importPath="$(build.nttree)\"
-      name="AdaptiveCards.XamlCardRenderer.dll"
-      sourceName="AdaptiveCards.XamlCardRenderer.dll"
+      name="Windows.Internal.AdaptiveCards.XamlCardRenderer.dll"
+      sourceName="Windows.Internal.AdaptiveCards.XamlCardRenderer.dll"
       sourcePath=".\"
       >
     <signatureInfo>
@@ -30,10 +30,10 @@
   </file>
   <COM>
     <servers>
-      <winRTInProcServer path="$(runtime.system32)\AdaptiveCards.XamlCardRenderer.dll">
+      <winRTInProcServer path="$(runtime.system32)\Windows.Internal.AdaptiveCards.XamlCardRenderer.dll">
         <classes>
           <class
-              activatableClassId="AdaptiveCards.XamlCardRenderer.XamlCardRenderer"
+              activatableClassId="Windows.Internal.AdaptiveCards.XamlCardRenderer.dll"
               threading="Both"
               trustLevel="Base"
               />
@@ -54,6 +54,16 @@
               />
           <class
               activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveContainer"
+              threading="Both"
+              trustLevel="Base"
+              />
+          <class
+              activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveColumn"
+              threading="Both"
+              trustLevel="Base"
+              />
+          <class
+              activatableClassId="AdaptiveCards.XamlCardRenderer.AdaptiveColumnSet"
               threading="Both"
               trustLevel="Base"
               />
